--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>ROOT</title>
+  <title>Azure Static Web - IoT</title>
 </head>
 
 <body>
   <main>
-    <h1>ROOT</h1>
+    <h1>Adame Mendoza Ian Jesús</h1>
+    <h1>Internet of Things</h1>
+    <p>Los dispositivos IoT (Internet of Things Devices) hacen uso de diferentes tecnologías para establecer conexiones entre ellos. Los dispositivos más comunes que a día de hoy podemos encontrar en el mercado hacen uso de tecnologías como Wi-Fi, Wi-Fi HaLow Bluetooth, Zigbee, Redes celulares (5g, lte, etc), LPWAN y muchas otras más con sus respectivas variaciones.
+    </p>
+    <a href="https://www.youtube.com/watch?v=c_G2yK7gJXk">Vídeo Internet de las cosas</a>
+    <a href="saludo.html">Saludo.html</a>
+    <a href="url">link text</a>
   </main>
 </body>
 
