--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </p>
     <a href="https://www.youtube.com/watch?v=c_G2yK7gJXk">Vídeo Internet de las cosas</a>
     <a href="saludo.html">Saludo.html</a>
-    <a href="url">link text</a>
+    <a href="despedida.html">Despedida.html</a>
   </main>
 </body>
 
